--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,3 +1,5 @@
+{% use 'navigation.html.twig' %}
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,6 +9,7 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
+        {{ block('main_navigation') }}
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
