--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -40,27 +40,45 @@
 					<p class="form-message" style="display: none;"></p>
 					<div class="contact-form">
 						<!-- Form Begins -->
-						<form role="form" name="contactform" id="contactform" method="post" action="php/contact-form.php">
-							<!-- Field 1 -->
-							<div class="input-text form-group">
-								<input type="text" name="contact_name" class="input-name form-control" placeholder="Full Name" />
-							</div>
-							<!-- Field 2 -->
-							<div class="input-email form-group">
-								<input type="email" name="contact_email" class="input-email form-control" placeholder="Email"/>
-							</div>
-							<!-- Field 3 -->
-							<div class="input-email form-group">
-								<input type="text" name="contact_phone" class="input-phone form-control" placeholder="Phone"/>
-							</div>
-							<!-- Field 4 -->
-							<div class="textarea-message form-group">
-								<textarea name="contact_message" class="textarea-message hight-82 form-control" placeholder="Message" rows="2" ></textarea>
-							</div>
-							<!-- Button -->
-							<button class="btn btn-default btn-block" type="submit">Send Now <i class="icon-paper-plane"></i></button>
-						</form>
-						<!-- Form Ends -->
+
+
+						{{ form_start(contact, {'action': path('contact'), 'attr': {'id': 'contactform'}}) }}
+						<div class="input-text form-group">
+							{{ form_widget(contact.fullName) }}
+						</div>
+						<div class="input-email form-group">
+							{{ form_widget(contact.email) }}
+						</div>
+						<div class="input-phone form-group">
+							{{ form_widget(contact.phone) }}
+						</div>
+						<div class="textarea-message form-group">
+							{{ form_widget(contact.message) }}
+						</div>
+						<button type="submit" class="button btn-info mr10 btn-block">Send Now <i class="icon-paper-plane"></i></button>
+						<!-- end .form-body section -->
+						{{ form_end(contact) }}
+
+
+
+
+						{#<form role="form" name="contactform" id="contactform" method="post" action="php/contact-form.php">#}
+							{#<div class="input-text form-group">#}
+								{#<input type="text" name="contact_name" class="input-name form-control" placeholder="Full Name" />#}
+							{#</div>#}
+							{#<div class="input-email form-group">#}
+								{#<input type="email" name="contact_email" class="input-email form-control" placeholder="Email"/>#}
+							{#</div>#}
+							{#<div class="input-email form-group">#}
+								{#<input type="text" name="contact_phone" class="input-phone form-control" placeholder="Phone"/>#}
+							{#</div>#}
+							{#<div class="textarea-message form-group">#}
+								{#<textarea name="contact_message" class="textarea-message hight-82 form-control" placeholder="Message" rows="2" ></textarea>#}
+							{#</div>#}
+							{#<button class="btn btn-default btn-block" type="submit">Send Now <i class="icon-paper-plane"></i></button>#}
+						{#</form>#}
+
+
 					</div>
 				</div>
 			</div>
