--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -4911,6 +4911,9 @@ ul.tags li{
     padding: 8px 12px;
     width: 100%;
 }
+textarea.form-control {
+	line-height: 2em;
+}
 .transparent-half-white{
 	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.5) !important;
 }
