updates to parameters default with company values

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -97,12 +97,12 @@
 			<div class="map-canvas"
 			     data-zoom="15"
 			     data-zoomcontrol="false"
-			     data-lat="33.57338"
-			     data-lng="-111.88749"
+			     data-lat="{{ company_location_latitude }}"
+			     data-lng="{{ company_location_longitude }}"
 			     data-type="roadmap"
 			     data-hue="#8eb4e3"
-			     data-title="Scottsdale Health Partners"
-			     data-content="Contact: +1 (480) 588-7528<br>
+			     data-title="{{ company_name }}"
+			     data-content="Contact: {{ company_phone }}<br>
 						<a href='mailto:info@scottsdalehealthpartners.com'>info@scottsdalehealthpartners.com</a>"
 			     style="height: 376px;">
 			</div>
