--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -11,32 +11,45 @@
 		</div>
 	</div>
 	<!-- page-header -->
-	<section id="contact-us" class="page-section">
+	<section id="say-hello" class="page-section">
+		<div class="container">
+			<div class="row text-center">
+				<div class="section-title text-center">
+					<h2 class="title">Want to say hello?</h2>
+				</div>
+				<address class="col-sm-4 col-md-4">
+					<i class="fa fa-map-marker i-8x icons-circle text-color light-bg hover-black"></i>
+					<div class="title">Address</div>
+					{{ company_address1 }}{% if company_address2 != '' %}, {{ company_address2 }}{% endif %}<br/>{{ company_city }}, {{ company_state }} {{ company_zip_code }}
+				</address>
+				<address class="col-sm-4 col-md-4">
+					<i class="fa fa-microphone i-8x icons-circle text-color light-bg hover-black"></i>
+					<div class="title">Phones</div>
+					<div>Support: {{ company_phone }}</div>
+				</address>
+				<address class="col-sm-4 col-md-4">
+					<i class="fa fa-envelope i-8x icons-circle text-color light-bg hover-black"></i>
+					<div class="title">Email Addresses</div>
+					<div>Support: <a href="mailto:{{ support_email }}">{{ support_email }}</a></div>
+				</address>
+
+			</div>
+		</div>
+	</section>
+	<section id="contact-us" class="page-section light-bg border-tb">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8">
-					<div class="row text-center">
-						<address class="col-sm-4 col-md-4">
-							<i class="fa fa-map-marker i-8x icons-circle text-color light-bg hover-black"></i>
-							<div class="title">Address</div>
-							{{ company_address1 }}{% if company_address2 != '' %}, {{ company_address2 }}{% endif %}<br/>{{ company_city }}, {{ company_state }} {{ company_zip_code }}
-						</address>
-						<address class="col-sm-4 col-md-4">
-							<i class="fa fa-microphone i-8x icons-circle text-color light-bg hover-black"></i>
-							<div class="title">Phones</div>
-							<div>Support: {{ company_phone }}</div>
-						</address>
-						<address class="col-sm-4 col-md-4">
-							<i class="fa fa-envelope i-8x icons-circle text-color light-bg hover-black"></i>
-							<div class="title">Email Addresses</div>
-							<div>Support: <a href="mailto:{{ support_email }}">{{ support_email }}</a></div>
-						</address>
+				<div class="col-md-12">
+					<div class="section-title text-center">
+						<h2 class="title">Want to know more about us?</h2>
 					</div>
-					<hr/>
+				</div>
+				<div class="col-md-6">
+					<p class="lead">Give us a call or drop us an email and we will get back to you as soon as we can.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				</div><!-- Contact Info -->
-				<div class="col-md-4">
+				<div class="col-md-6">
 					<p class="form-message alert hidden"></p>
 					<div class="contact-form">
 						<!-- Form Begins -->
