minor contact page style updates. moved contact divider to page elements.

--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -109,3 +109,15 @@
 		</div>
 	</section> <!-- map -->
 {% endblock %}
+
+{% block pe_contact_divider %}
+	<div id="get-quote" class="bg-color get-a-quote black text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					Become A Partner / Need Help? <a class="black" href="{{ path('contact') }}">Contact Us </a>
+				</div>
+			</div>
+		</div>
+	</div>
+{% endblock %}
