--- a/src/SiteBundle/Resources/views/Contact/contact.html.twig
+++ b/src/SiteBundle/Resources/views/Contact/contact.html.twig
@@ -18,17 +18,17 @@
 					<h2 class="title">Want to say hello?</h2>
 				</div>
 				<address class="col-sm-4 col-md-4">
-					<i class="fa fa-map-marker i-8x icons-circle text-color light-bg hover-black"></i>
+					<i class="fa fa-map-marker i-9x icons-circle text-color light-bg hover-black"></i>
 					<div class="title">Address</div>
 					{{ company_address1 }}{% if company_address2 != '' %}, {{ company_address2 }}{% endif %}<br/>{{ company_city }}, {{ company_state }} {{ company_zip_code }}
 				</address>
 				<address class="col-sm-4 col-md-4">
-					<i class="fa fa-microphone i-8x icons-circle text-color light-bg hover-black"></i>
+					<i class="fa fa-microphone i-9x icons-circle text-color light-bg hover-black"></i>
 					<div class="title">Phones</div>
 					<div>Support: {{ company_phone }}</div>
 				</address>
 				<address class="col-sm-4 col-md-4">
-					<i class="fa fa-envelope i-8x icons-circle text-color light-bg hover-black"></i>
+					<i class="fa fa-envelope i-9x icons-circle text-color light-bg hover-black"></i>
 					<div class="title">Email Addresses</div>
 					<div>Support: <a href="mailto:{{ support_email }}">{{ support_email }}</a></div>
 				</address>
@@ -75,15 +75,6 @@
 	</section><!-- page-section -->
 	{{ block('pe_google_map') }}
 	<!-- clients -->
-	<div id="get-quote" class="bg-color get-a-quote black text-center">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					Become A Partner / Need Help? <a class="black" href="#">Contact Us </a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- request -->
+	{{ block('pe_contact_divider') }}
 
 {% endblock %}
