--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -383,14 +383,6 @@
 	{{ block('pe_testimonials') }}
 	{{ block('pe_google_map') }}
 	<!-- clients -->
-	<div id="get-quote" class="bg-color get-a-quote black text-center">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					Become A Partner / Need Help? <a class="black" href="#">Contact Us </a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- request -->
+	{{ block('pe_contact_divider') }}
+
 {% endblock %}
