added new controllers for footer pages

--- a/app/Resources/views/footer.html.twig
+++ b/app/Resources/views/footer.html.twig
@@ -11,41 +11,17 @@
 					<!-- Text -->
 					<p> We like to provide great site with complete features what you want to impletement in your business!</p>
 					<!-- Address -->
-					<p><strong>Office:</strong> Zozotheme.com<br> No. 12, Ribon Building,<br> Walse street, Australia.</p>
+					<p><strong>Office:</strong> {{ company_name }}<br> {{ company_address1 }}{% if company_address2 != '' %}, {{ company_address2 }}{% endif %}<br/>{{ company_city }}, {{ company_state }} {{ company_zip_code }}</p>
 					<!-- Phone -->
-					<p><strong>Call Us:</strong> +0 (123) 456-78-90
-						or <br> +0 (123) 456-78-90
+					<p><strong>Call Us:</strong> {{ company_phone }}
 					</p>
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 widget bottom-xs-pad-20">
 					<div class="widget-title">
 						<!-- Title -->
-						<h3 class="title">Blogroll</h3>
+						<h3 class="title">Need Help?</h3>
 					</div>
-					<nav>
-						<ul>
-							<!-- List Items -->
-							<li><a href="#">Complete Documentations</a></li>
-							<li><a href="#">Additional Plugins & Modules</a></li>
-							<li><a href="#">Child Themes</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="#">Support Forums</a></li>
-							<li><a href="#">Useful Blog</a></li>
-						</ul>
-					</nav>
-					<br>
-					<div class="widget-title">
-						<!-- Title -->
-						<h3 class="title">My account</h3>
-					</div>
-					<nav>
-						<ul>
-							<!-- List Items -->
-							<li><a href="#">My account</a></li>
-							<li><a href="#">Order History</a></li>
-							<li><a href="#">Shopping Cart</a></li>
-						</ul>
-					</nav>
+					{{ knp_menu_render("SiteBundle:Builder:footerMenu") }}
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 widget">
 					<div class="widget-title">
@@ -79,19 +55,14 @@
 							</div>
 						</form>
 					</div>
-					<!-- Count -->
-					<div class="footer-count">
-						<p class="count-number" data-count="93550">total downloads : <span class="counter"></span></p>
-					</div>
-					<div class="footer-count">
-						<p class="count-number" data-count="79550">happy clients : <span class="counter"></span></p>
+					<div class="widget-title">
+						<!-- Title -->
+						<h3 class="title">Join the Conversation</h3>
 					</div>
 					<!-- Social Links -->
 					<div class="social-icon gray-bg icons-circle i-3x">
 						<a href="#"><i class="fa fa-facebook"></i></a>
 						<a href="#"><i class="fa fa-twitter"></i></a>
-						<a href="#"><i class="fa fa-pinterest"></i></a>
-						<a href="#"><i class="fa fa-google"></i></a>
 						<a href="#"><i class="fa fa-linkedin"></i></a>
 					</div>
 				</div>
@@ -104,16 +75,13 @@
 		<div class="container">
 			<div class="row">
 				<!-- Copyrights -->
-				<div class="col-xs-12 col-sm-6 col-md-6">
-					Copyright &copy; zozothemes.com., 2014
-					<br>
-					<!-- Terms Link -->
-					<a href="#">Terms of Use</a> / <a href="#"> Privacy Policy</a>
+				<div class="col-xs-12 col-sm-6 col-md-6 line-height-3x">
+					Copyright &copy; {{ company_name }}, &reg; {{ company_founded }}{% if "now"|date("Y") != company_founded %} - {{ "now"|date("Y") }}{% endif %}
 				</div>
 				<div class="col-xs-6 col-sm-6 col-md-6 text-right page-scroll gray-bg icons-circle i-3x">
 					<!-- Goto Top -->
 					<a href="#page">
-						<i class="glyphicon glyphicon-arrow-up"></i>
+						<i class="glyphicon glyphicon-arrow-up no-margin"></i>
 					</a>
 				</div>
 			</div>
