remove contact number and search from nav in any view less than 768

--- a/app/Resources/views/navigation.html.twig
+++ b/app/Resources/views/navigation.html.twig
@@ -30,7 +30,7 @@
 								<!-- Header Contact Content -->
 								<div class="bg-white hide-show-content no-display header-contact-content">
 									<p class="vertically-absolute-middle">Call Us
-										<strong>+1 (480) 588-7528</strong></p>
+										<strong>{{ company_phone }}</strong></p>
 									<button class="close">
 										<i class="fa fa-times"></i>
 									</button>
