updates to make home page look like mockups

--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -67,7 +67,7 @@
 	<section id="about-us" class="page-section" data-animation="fadeInUp">
 		<div class="container">
 			<div class="section-title">
-				<h1 class="title">Clinically integrated patient-centered care</h1>
+				<h1 class="title">Who Is {{ company_name }}?</h1>
 			</div>
 			<div class="row">
 				<div class="col-md-12 text-center">
@@ -81,14 +81,14 @@
 					<div class="s-feature-box text-center">
 						<div class="mask-top">
 							<!-- Icon -->
-							<i class="fa fa-heartbeat"></i>
+							<i class="fa fa-user-md"></i>
 							<!-- Title -->
-							<h4>Technology</h4></div>
+							<h4>Physician Directory</h4></div>
 						<div class="mask-bottom">
 							<!-- Icon -->
-							<i class="fa fa-heartbeat"></i>
+							<i class="fa fa-user-md"></i>
 							<!-- Title -->
-							<h4>Technology</h4>
+							<h4>Physician Directory</h4>
 							<!-- Text -->
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
 					</div>
@@ -100,12 +100,12 @@
 							<!-- Icon -->
 							<i class="fa fa-hospital-o"></i>
 							<!-- Title -->
-							<h4>Partners</h4></div>
+							<h4>Hospitals</h4></div>
 						<div class="mask-bottom">
 							<!-- Icon -->
 							<i class="fa fa-hospital-o"></i>
 							<!-- Title -->
-							<h4>Partners</h4>
+							<h4>Hospitals</h4>
 							<!-- Text -->
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
 					</div>
@@ -115,14 +115,14 @@
 					<div class="s-feature-box text-center">
 						<div class="mask-top">
 							<!-- Icon -->
-							<i class="fa fa-user-md"></i>
+							<i class="fa fa-heartbeat"></i>
 							<!-- Title -->
-							<h4>Physician Directory</h4></div>
+							<h4>Insurance Plans</h4></div>
 						<div class="mask-bottom">
 							<!-- Icon -->
-							<i class="fa fa-user-md"></i>
+							<i class="fa fa-heartbeat"></i>
 							<!-- Title -->
-							<h4>Physician Directory</h4>
+							<h4>Insurance Plans</h4>
 							<!-- Text -->
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
 					</div>
@@ -154,7 +154,7 @@
 				<div class="col-md-6 pad-60">
 					<div class="section-title text-left">
 						<!-- Title -->
-						<h2 class="title">Who We Are</h2>
+						<h2 class="title">Who Are We?</h2>
 					</div>
 					<div class="owl-carousel pagination-1 dark-switch" data-pagination="true" data-autoplay="true" data-navigation="false" data-singleitem="true">
 						<div class="item">
@@ -173,7 +173,7 @@
 						</div>
 						<div class="item">
 							<!-- Heading -->
-							<h2 class="entry-title"><a href="#">Our history</a></h2>
+							<h2 class="entry-title"><a href="#">Our mission</a></h2>
 							<!-- Content -->
 							<div class="entry-content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi facere earum quis ipsa vitae qui minima esse ducimus dolorum iste nisi
@@ -187,7 +187,7 @@
 						</div>
 						<div class="item">
 							<!-- Heading -->
-							<h2 class="entry-title"><a href="#">Our mission</a></h2>
+							<h2 class="entry-title"><a href="#">Our history</a></h2>
 							<!-- Content -->
 							<div class="entry-content">
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi facere earum quis ipsa vitae qui minima esse ducimus dolorum iste nisi
@@ -236,7 +236,7 @@
 						<div class="col-md-4">
 							<!-- Title And Content -->
 							<span class="icon-anchor text-color"></span>
-							<h5>Great Infrastructure</h5>
+							<h5>Care Management</h5>
 							<p>Lorem ipsum dolor sit amet elit. consectetur Vest</p>
 						</div>
 						<!-- Features 1 -->
@@ -244,7 +244,7 @@
 						<div class="col-md-4">
 							<!-- Title And Content -->
 							<span class="icon-heart-fill text-color"></span>
-							<h5>Good Check Up</h5>
+							<h5>Great Outcomes</h5>
 							<p>Lorem ipsum dolor sit amet elit. consectetur Vest</p>
 						</div>
 						<!-- Features 2 -->
@@ -252,7 +252,7 @@
 						<div class="col-md-4">
 							<!-- Title And Content -->
 							<span class="icon-user-md text-color"></span>
-							<h5>Experienced Doctors</h5>
+							<h5>Excellent Patient Care</h5>
 							<p>Lorem ipsum dolor sit amet elit. consectetur Vest</p>
 						</div>
 						<!-- Features 3 -->
@@ -265,32 +265,32 @@
 	</section>
 	<!-- additional -->
 	<section id="fun-factor" class="page-section">
-		<div class="image-bg content-in fixed" data-background="img/sections/bg/bg-11.jpg"></div>
+		<div class="image-bg content-in fixed" data-background="{{ asset('bundles/site/images/sections/bg/counters-back.jpg') }}"></div>
 		<div class="container">
 			<div class="row text-center fact-counter white">
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
-					<div class="count-number" data-count="550"><span class="counter"></span></div>
+					<div class="count-number" data-count="5"><span class="counter"></span></div>
 					<!-- Title -->
-					<h5>Branches</h5>
+					<h5>Hospitals</h5>
 				</div>
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
-					<div class="count-number" data-count="1223"><span class="counter"></span></div>
+					<div class="count-number" data-count="398"><span class="counter"></span></div>
 					<!-- Title -->
-					<h5>Doctors</h5>
+					<h5>Practices</h5>
 				</div>
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
 					<div class="count-number" data-count="925"><span class="counter"></span></div>
 					<!-- Title -->
-					<h5>Countries</h5>
+					<h5>Physicians</h5>
 				</div>
 				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
 					<!-- Icon -->
 					<div class="count-number" data-count="1910"><span class="counter"></span></div>
 					<!-- Title -->
-					<h5>Awards</h5>
+					<h5>Specialties</h5>
 				</div>
 			</div>
 		</div>
