--- a/src/SiteBundle/Resources/public/css/photostack.css
+++ b/src/SiteBundle/Resources/public/css/photostack.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icons';
-	src:url('../fonts/icons/icons.eot');
-	src:url('../fonts/icons/icons.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/icons/icons.woff') format('woff'),
-		url('../fonts/icons/icons.ttf') format('truetype'),
-		url('../fonts/icons/icons.svg#icons') format('svg');
+	src:url('/bundles/site/fonts/icons/icons.eot');
+	src:url('/bundles/site/fonts/icons/icons.eot?#iefix') format('embedded-opentype'),
+		url('/bundles/site/fonts/icons/icons.woff') format('woff'),
+		url('/bundles/site/fonts/icons/icons.ttf') format('truetype'),
+		url('/bundles/site/fonts/icons/icons.svg#icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
