--- a/src/SiteBundle/Resources/public/css/settings.css
+++ b/src/SiteBundle/Resources/public/css/settings.css
@@ -1058,11 +1058,11 @@ zoom: 1;
 }
 @font-face {
   font-family: 'revicons';
-  src: url('../fonts/revicons.eot?5510888');
-  src: url('../fonts/revicons.eot?5510888#iefix') format('embedded-opentype'),
-       url('../fonts/revicons.woff?5510888') format('woff'),
-       url('../fonts/revicons.ttf?5510888') format('truetype'),
-       url('../fonts/revicons.svg?5510888#revicons') format('svg');
+  src: url('/bundles/site/fonts/revicons.eot?5510888');
+  src: url('/bundles/site/fonts/revicons.eot?5510888#iefix') format('embedded-opentype'),
+       url('/bundles/site/fonts/revicons.woff?5510888') format('woff'),
+       url('/bundles/site/fonts/revicons.ttf?5510888') format('truetype'),
+       url('/bundles/site/fonts/revicons.svg?5510888#revicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -1072,7 +1072,7 @@ zoom: 1;
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'revicons';
-    src: url('../fonts/revicons.svg?5510888#revicons') format('svg');
+    src: url('/bundles/site/fonts/revicons.svg?5510888#revicons') format('svg');
   }
 }
 */
