--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -382,32 +382,15 @@
 	</section>
 	<!-- Features -->
 	<section id="our-locations" class="page-section">
-		<div class="image-bg content-in fixed" data-background="{{ asset('bundles/site/images/sections/bg/counters-back.jpg') }}"></div>
+		<div class="image-bg content-in fixed" data-background="{{ asset('bundles/site/images/sections/bg/locations-map.jpg') }}"></div>
 		<div class="container">
 			<div class="row text-center fact-counter white">
-				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
-					<!-- Icon -->
-					<div class="count-number" data-count="5"><span class="counter"></span></div>
-					<!-- Title -->
-					<h5>Hospitals</h5>
-				</div>
-				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
-					<!-- Icon -->
-					<div class="count-number" data-count="398"><span class="counter"></span></div>
-					<!-- Title -->
-					<h5>Practices</h5>
-				</div>
-				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
-					<!-- Icon -->
-					<div class="count-number" data-count="925"><span class="counter"></span></div>
-					<!-- Title -->
-					<h5>Physicians</h5>
-				</div>
-				<div class="col-sm-4 col-md-3 bottom-xs-pad-30">
-					<!-- Icon -->
-					<div class="count-number" data-count="1910"><span class="counter"></span></div>
-					<!-- Title -->
-					<h5>Specialties</h5>
+				<div class="col-sm-12 bottom-xs-pad-30">
+					<div class="section-title invert-divider">
+						<!-- Heading -->
+						<h2 class="title">Hundreds of Physicians</h2>
+					</div>
+					<p><a href="#" class="btn btn-success">Locate A Physician Now</a></p>
 				</div>
 			</div>
 		</div>
