home page and owl carousel setting updates

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -37,8 +37,8 @@
 
 
 	<!-- Font -->
-	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arimo:300,400,700,400italic,700italic' />
-	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css' />
+	<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Arimo:300,400,700,400italic,700italic' />
+	<link href='//fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css' />
 
 	<!-- Core CSS Files -->
 
