--- a/app/Resources/views/js_footer_includes.html.twig
+++ b/app/Resources/views/js_footer_includes.html.twig
@@ -1,7 +1,7 @@
 {% block js_footer_includes %}
 
 	<!-- Scripts -->
-	<script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+	<script src='//code.jquery.com/jquery-2.1.1.min.js'></script>
 
 	{% javascripts
 		'bundles/site/js/bootstrap.min.js'
@@ -20,12 +20,12 @@
 		'bundles/site/js/jquery.prettyPhoto.js'
 		'bundles/site/js/jquery.parallax-1.1.3.js'
 		'bundles/site/js/jquery.countTo.js'
-		'bundles/site/js/tweet/carousel.js'
-		'bundles/site/js/tweet/scripts.js'
-		'bundles/site/js/tweet/tweetie.min.js'
 		'bundles/site/js/jquery.mb.YTPlayer.js'
 		'bundles/site/js/custom.js'
 	filter='uglifyjs2' %}
+	{#'bundles/site/js/tweet/carousel.js'#}
+	{#'bundles/site/js/tweet/scripts.js'#}
+	{#'bundles/site/js/tweet/tweetie.min.js'#}
 	<script src="{{ asset_url }}"></script>
 	{% endjavascripts %}
 	<!-- Scripts -->
