--- a/app/Resources/views/page_elements.html.twig
+++ b/app/Resources/views/page_elements.html.twig
@@ -4,7 +4,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 testimonails">
-					<div class="owl-carousel pagination-1 dark-switch " data-pagination="true" data-autoplay="true" data-navigation="false" data-singleitem="true">
+					<div class="owl-carousel pagination-1 dark-switch owl-theme animated fadeInRight visible" data-animation="fadeInRight" data-singleitem="true" data-navigation="false" data-autoplay="true" data-pagination="true" data-effect="backSlide">
 						<div class="item">
 							<div class="desc-border bottom-arrow">
 								<blockquote class="small-text text-center">
