--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -156,7 +156,7 @@
 						<!-- Title -->
 						<h2 class="title">Who We Are</h2>
 					</div>
-					<div class="owl-carousel pagination-1 dark-switch" data-pagination="true" data-autoplay="true" data-navigation="false" data-singleitem="true">
+					<div class="owl-carousel pagination-1 dark-switch owl-theme animated fadeInRight visible" data-animation="fadeInRight" data-singleitem="true" data-navigation="false" data-autoplay="false" data-pagination="true">
 						<div class="item">
 							<!-- Heading -->
 							<h2 class="entry-title"><a href="#">Our philosophy</a></h2>
