broke out header for better template management

--- a/src/SiteBundle/Resources/views/Home/home.html.twig
+++ b/src/SiteBundle/Resources/views/Home/home.html.twig
@@ -90,7 +90,7 @@
 							<!-- Title -->
 							<h4>Physician Directory</h4>
 							<!-- Text -->
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
+							<p>Search more than 600 local physicians in the SHP network</p></div>
 					</div>
 				</div>
 				<!-- Special Feature Box 2 -->
@@ -107,7 +107,8 @@
 							<!-- Title -->
 							<h4>Hospitals</h4>
 							<!-- Text -->
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
+							<p>Scottsdale Health Partners is aligned with 5 hospitals in the Phoenix area</p>
+						</div>
 					</div>
 				</div>
 				<!-- Special Feature Box 3 -->
@@ -124,7 +125,14 @@
 							<!-- Title -->
 							<h4>Insurance Plans</h4>
 							<!-- Text -->
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
+							<ul>
+								<li>Blue Cross Blue Shield</li>
+								<li>Cigna Open Access Plus</li>
+								<li>Humana Gold Plus</li>
+								<li>Meritus HMO</li>
+								<li>Medicare ACO</li>
+							</ul>
+						</div>
 					</div>
 				</div>
 				<!-- Special Feature Box 3 -->
@@ -141,7 +149,9 @@
 							<!-- Title -->
 							<h4>Members</h4>
 							<!-- Text -->
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec odio ipsum. Suspendisse cursus malesuada facilisis.</p></div>
+							<p>Would you like to know more about joining the SHP network?</p>
+							<p><a href="#">Log in</a> or <a href="#">request access</a> to the SHP Physician Member website.</p>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -162,12 +172,15 @@
 							<h2 class="entry-title"><a href="#">Our philosophy</a></h2>
 							<!-- Content -->
 							<div class="entry-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi facere earum quis ipsa vitae qui minima esse ducimus dolorum iste nisi
-									laborum repellat dolores dolore debitis adipisci nemo quia autem pariatur a voluptatem dignissimos maiores accusantium nobis tempora consequatur cumque quas ea doloribus deleniti.
-								</p>
-								<p>Quibusdam commodi laboriosam error temporibus iste ipsa soluta distinctio maiores ad totam beatae incidunt veritatis enim? Reiciendis
-									voluptate assumenda quidem eos explicabo rerum.
-								</p>
+								<p>SHP is committed to reducing healthcare cost and delivering outstanding patient care.</p>
+								<ul class="list-style small">
+									<label>We strongly believe these results are achieved through:</label>
+									<li>Strong relationships between primary care providers and patients</li>
+									<li>Developing and following evidence-based care guidelines</li>
+									<li>Providing care coordination services for patients to ensure that patients get the right care at the right time</li>
+									<li>Collaborating, coordinating and communicating within an integrated community of care providers</li>
+									<li>Obtaining, analyzing, and leveraging clinical and quality data for better health outcomes</li>
+								</ul>
 								<p><a href="#" class="btn btn-default">Read more</a></p>
 							</div>
 						</div>
@@ -176,12 +189,7 @@
 							<h2 class="entry-title"><a href="#">Our mission</a></h2>
 							<!-- Content -->
 							<div class="entry-content">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi facere earum quis ipsa vitae qui minima esse ducimus dolorum iste nisi
-									laborum repellat dolores dolore debitis adipisci nemo quia autem pariatur a voluptatem dignissimos maiores accusantium nobis tempora consequatur cumque quas ea doloribus deleniti.
-								</p>
-								<p>Quibusdam commodi laboriosam error temporibus iste ipsa soluta distinctio maiores ad totam beatae incidunt veritatis enim? Reiciendis
-									voluptate assumenda quidem eos explicabo rerum.
-								</p>
+								<p>Scottsdale Health Partners is a collaboration of medical professionals and a local healthcare system committed to providing high quality, coordinated and innovative care for the patients and families we serve.</p>
 								<p><a href="#" class="btn btn-default">Read more</a></p>
 							</div>
 						</div>
@@ -203,7 +211,7 @@
 				</div>
 				<div class="col-md-6 no-pad text-center">
 					<!-- Image -->
-					<div class="image-bg" data-background="img/sections/bg/full-img9.jpg"></div>
+					<div class="image-bg" data-background="{{ asset('bundles/site/images/sections/bg/who-we-are.jpg') }}"></div>
 				</div>
 			</div>
 		</div>
