--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -2397,7 +2397,7 @@ p.tp-caption.button-block a{
 	min-height:290px;
 	border:1px solid #f2f2f2;
 	margin-bottom:20px;
-	cursor:pointer;
+	cursor: default;
 }
 .special-feature .mask-bottom{
 	color:#333333;
