--- a/src/SiteBundle/Resources/public/css/style.css
+++ b/src/SiteBundle/Resources/public/css/style.css
@@ -205,16 +205,24 @@ ol li{
 }
 ul.list-style{
 	margin: 0 0 18px;
-    padding: 0 0 0 60px;
+    padding: 0;
 }
 ul.list-style li{
 	position:relative;
 	line-height:1;
-	list-style: disc;
-	padding-left:5px;
+	list-style: none;
 	padding-top:5px;
 	padding-bottom:5px;
 }
+
+ul.list-style li::before {
+	content: "•";
+	font-size: 0.75em;
+	margin-right: 10px;
+	position: relative;
+	top: -2px;
+}
+
 .arrow-style {
     margin: 0 0 22px;
     padding: 0 0 0 60px;
